// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header: should append returnUrl to signin and register links if present 1`] = `
<header
  aria-label="Primary navigation"
  className="root"
  role="banner"
>
  <section
    className="content"
  >
    <div
      className="banner"
    >
      <h1
        className="logo"
        data-automation="logo"
      >
        <Logo
          className=""
          svgClassName="logoSvg"
        />
        <a
          className="logoLink"
          data-analytics="header:jobs"
          href="/"
        >
          <ScreenReaderOnly>
            SEEK
          </ScreenReaderOnly>
        </a>
      </h1>
      <Hidden
        className="logoNote"
        desktop={false}
        mobile={false}
        print={false}
        screen={true}
      >
        Australia’s #1 job site
      </Hidden>
      <Hidden
        className="userWrapper"
        desktop={false}
        mobile={false}
        print={true}
        screen={false}
      >
        <div
          className="user"
        >
          <div
            className="userAccountWrapper"
          >
            <UserAccount
              activeTab={null}
              authenticationStatus="pending"
              linkRenderer={[Function]}
              locale="AU"
              returnUrl="/jobs"
              userName=""
            />
          </div>
          <div
            className="signInRegisterWrapper"
          >
            <SignInRegister
              linkRenderer={[Function]}
              returnUrl="/jobs"
            />
          </div>
          <span
            className="divider"
          />
        </div>
        <div
          className="employerSite"
        >
          <a
            className="employerLink"
            data-analytics="header:employer+site"
            href="https://talent.seek.com.au/"
          >
            Employer site
          </a>
        </div>
      </Hidden>
    </div>
    <Hidden
      className="navigation"
      desktop={false}
      mobile={false}
      print={true}
      screen={false}
    >
      <Navigation
        activeTab={null}
        divider={true}
        linkRenderer={[Function]}
        locale="AU"
      />
    </Hidden>
    <Hidden
      className="topBanner"
      desktop={false}
      mobile={false}
      print={true}
      screen={false}
    >
      <div
        className="topBannerContent"
      >
        <PartnerSites
          linkRenderer={[Function]}
          locale="AU"
        />
        <div
          className="locale"
        >
          <Locales
            linkRenderer={[Function]}
            locale="AU"
          />
        </div>
      </div>
    </Hidden>
  </section>
</header>
`;

exports[`Header: should render first part of email address when username isn't present 1`] = `
<header
  aria-label="Primary navigation"
  className="root"
  role="banner"
>
  <section
    className="content"
  >
    <div
      className="banner"
    >
      <h1
        className="logo"
        data-automation="logo"
      >
        <Logo
          className=""
          svgClassName="logoSvg"
        />
        <a
          className="logoLink"
          data-analytics="header:jobs"
          href="/"
        >
          <ScreenReaderOnly>
            SEEK
          </ScreenReaderOnly>
        </a>
      </h1>
      <Hidden
        className="logoNote"
        desktop={false}
        mobile={false}
        print={false}
        screen={true}
      >
        Australia’s #1 job site
      </Hidden>
      <Hidden
        className="userWrapper"
        desktop={false}
        mobile={false}
        print={true}
        screen={false}
      >
        <div
          className="user user_isAuthenticated user_isReady"
        >
          <div
            className="userAccountWrapper"
          >
            <UserAccount
              activeTab={null}
              authenticationStatus="authenticated"
              linkRenderer={[Function]}
              locale="AU"
              userName="leeroybrown"
            />
          </div>
          <div
            className="signInRegisterWrapper"
          >
            <SignInRegister
              linkRenderer={[Function]}
            />
          </div>
          <span
            className="divider"
          />
        </div>
        <div
          className="employerSite"
        >
          <a
            className="employerLink"
            data-analytics="header:employer+site"
            href="https://talent.seek.com.au/"
          >
            Employer site
          </a>
        </div>
      </Hidden>
    </div>
    <Hidden
      className="navigation"
      desktop={false}
      mobile={false}
      print={true}
      screen={false}
    >
      <Navigation
        activeTab={null}
        divider={true}
        linkRenderer={[Function]}
        locale="AU"
      />
    </Hidden>
    <Hidden
      className="topBanner"
      desktop={false}
      mobile={false}
      print={true}
      screen={false}
    >
      <div
        className="topBannerContent"
      >
        <PartnerSites
          linkRenderer={[Function]}
          locale="AU"
        />
        <div
          className="locale"
        >
          <Locales
            linkRenderer={[Function]}
            locale="AU"
          />
        </div>
      </div>
    </Hidden>
  </section>
</header>
`;

exports[`Header: should render when activeTab is 'Profile' 1`] = `
<header
  aria-label="Primary navigation"
  className="root"
  role="banner"
>
  <section
    className="content"
  >
    <div
      className="banner"
    >
      <h1
        className="logo"
        data-automation="logo"
      >
        <Logo
          className=""
          svgClassName="logoSvg"
        />
        <a
          className="logoLink"
          data-analytics="header:jobs"
          href="/"
        >
          <ScreenReaderOnly>
            SEEK
          </ScreenReaderOnly>
        </a>
      </h1>
      <Hidden
        className="logoNote"
        desktop={false}
        mobile={false}
        print={false}
        screen={true}
      >
        Australia’s #1 job site
      </Hidden>
      <Hidden
        className="userWrapper"
        desktop={false}
        mobile={false}
        print={true}
        screen={false}
      >
        <div
          className="user"
        >
          <div
            className="userAccountWrapper"
          >
            <UserAccount
              activeTab="Profile"
              authenticationStatus="pending"
              linkRenderer={[Function]}
              locale="AU"
              userName=""
            />
          </div>
          <div
            className="signInRegisterWrapper"
          >
            <SignInRegister
              linkRenderer={[Function]}
            />
          </div>
          <span
            className="divider"
          />
        </div>
        <div
          className="employerSite"
        >
          <a
            className="employerLink"
            data-analytics="header:employer+site"
            href="https://talent.seek.com.au/"
          >
            Employer site
          </a>
        </div>
      </Hidden>
    </div>
    <Hidden
      className="navigation"
      desktop={false}
      mobile={false}
      print={true}
      screen={false}
    >
      <Navigation
        activeTab="Profile"
        divider={true}
        linkRenderer={[Function]}
        locale="AU"
      />
    </Hidden>
    <Hidden
      className="topBanner"
      desktop={false}
      mobile={false}
      print={true}
      screen={false}
    >
      <div
        className="topBannerContent"
      >
        <PartnerSites
          linkRenderer={[Function]}
          locale="AU"
        />
        <div
          className="locale"
        >
          <Locales
            linkRenderer={[Function]}
            locale="AU"
          />
        </div>
      </div>
    </Hidden>
  </section>
</header>
`;

exports[`Header: should render when authenticated 1`] = `
<header
  aria-label="Primary navigation"
  className="root"
  role="banner"
>
  <section
    className="content"
  >
    <div
      className="banner"
    >
      <h1
        className="logo"
        data-automation="logo"
      >
        <Logo
          className=""
          svgClassName="logoSvg"
        />
        <a
          className="logoLink"
          data-analytics="header:jobs"
          href="/"
        >
          <ScreenReaderOnly>
            SEEK
          </ScreenReaderOnly>
        </a>
      </h1>
      <Hidden
        className="logoNote"
        desktop={false}
        mobile={false}
        print={false}
        screen={true}
      >
        Australia’s #1 job site
      </Hidden>
      <Hidden
        className="userWrapper"
        desktop={false}
        mobile={false}
        print={true}
        screen={false}
      >
        <div
          className="user user_isAuthenticated user_isReady"
        >
          <div
            className="userAccountWrapper"
          >
            <UserAccount
              activeTab={null}
              authenticationStatus="authenticated"
              linkRenderer={[Function]}
              locale="AU"
              userName="Leeroy"
            />
          </div>
          <div
            className="signInRegisterWrapper"
          >
            <SignInRegister
              linkRenderer={[Function]}
            />
          </div>
          <span
            className="divider"
          />
        </div>
        <div
          className="employerSite"
        >
          <a
            className="employerLink"
            data-analytics="header:employer+site"
            href="https://talent.seek.com.au/"
          >
            Employer site
          </a>
        </div>
      </Hidden>
    </div>
    <Hidden
      className="navigation"
      desktop={false}
      mobile={false}
      print={true}
      screen={false}
    >
      <Navigation
        activeTab={null}
        divider={true}
        linkRenderer={[Function]}
        locale="AU"
      />
    </Hidden>
    <Hidden
      className="topBanner"
      desktop={false}
      mobile={false}
      print={true}
      screen={false}
    >
      <div
        className="topBannerContent"
      >
        <PartnerSites
          linkRenderer={[Function]}
          locale="AU"
        />
        <div
          className="locale"
        >
          <Locales
            linkRenderer={[Function]}
            locale="AU"
          />
        </div>
      </div>
    </Hidden>
  </section>
</header>
`;

exports[`Header: should render when authenticated but username and email is not yet provided 1`] = `
<header
  aria-label="Primary navigation"
  className="root"
  role="banner"
>
  <section
    className="content"
  >
    <div
      className="banner"
    >
      <h1
        className="logo"
        data-automation="logo"
      >
        <Logo
          className=""
          svgClassName="logoSvg"
        />
        <a
          className="logoLink"
          data-analytics="header:jobs"
          href="/"
        >
          <ScreenReaderOnly>
            SEEK
          </ScreenReaderOnly>
        </a>
      </h1>
      <Hidden
        className="logoNote"
        desktop={false}
        mobile={false}
        print={false}
        screen={true}
      >
        Australia’s #1 job site
      </Hidden>
      <Hidden
        className="userWrapper"
        desktop={false}
        mobile={false}
        print={true}
        screen={false}
      >
        <div
          className="user"
        >
          <div
            className="userAccountWrapper"
          >
            <UserAccount
              activeTab={null}
              authenticationStatus="authenticated"
              linkRenderer={[Function]}
              locale="AU"
              userName=""
            />
          </div>
          <div
            className="signInRegisterWrapper"
          >
            <SignInRegister
              linkRenderer={[Function]}
            />
          </div>
          <span
            className="divider"
          />
        </div>
        <div
          className="employerSite"
        >
          <a
            className="employerLink"
            data-analytics="header:employer+site"
            href="https://talent.seek.com.au/"
          >
            Employer site
          </a>
        </div>
      </Hidden>
    </div>
    <Hidden
      className="navigation"
      desktop={false}
      mobile={false}
      print={true}
      screen={false}
    >
      <Navigation
        activeTab={null}
        divider={true}
        linkRenderer={[Function]}
        locale="AU"
      />
    </Hidden>
    <Hidden
      className="topBanner"
      desktop={false}
      mobile={false}
      print={true}
      screen={false}
    >
      <div
        className="topBannerContent"
      >
        <PartnerSites
          linkRenderer={[Function]}
          locale="AU"
        />
        <div
          className="locale"
        >
          <Locales
            linkRenderer={[Function]}
            locale="AU"
          />
        </div>
      </div>
    </Hidden>
  </section>
</header>
`;

exports[`Header: should render when authentication is pending 1`] = `
<header
  aria-label="Primary navigation"
  className="root"
  role="banner"
>
  <section
    className="content"
  >
    <div
      className="banner"
    >
      <h1
        className="logo"
        data-automation="logo"
      >
        <Logo
          className=""
          svgClassName="logoSvg"
        />
        <a
          className="logoLink"
          data-analytics="header:jobs"
          href="/"
        >
          <ScreenReaderOnly>
            SEEK
          </ScreenReaderOnly>
        </a>
      </h1>
      <Hidden
        className="logoNote"
        desktop={false}
        mobile={false}
        print={false}
        screen={true}
      >
        Australia’s #1 job site
      </Hidden>
      <Hidden
        className="userWrapper"
        desktop={false}
        mobile={false}
        print={true}
        screen={false}
      >
        <div
          className="user"
        >
          <div
            className="userAccountWrapper"
          >
            <UserAccount
              activeTab={null}
              authenticationStatus="pending"
              linkRenderer={[Function]}
              locale="AU"
              userName=""
            />
          </div>
          <div
            className="signInRegisterWrapper"
          >
            <SignInRegister
              linkRenderer={[Function]}
            />
          </div>
          <span
            className="divider"
          />
        </div>
        <div
          className="employerSite"
        >
          <a
            className="employerLink"
            data-analytics="header:employer+site"
            href="https://talent.seek.com.au/"
          >
            Employer site
          </a>
        </div>
      </Hidden>
    </div>
    <Hidden
      className="navigation"
      desktop={false}
      mobile={false}
      print={true}
      screen={false}
    >
      <Navigation
        activeTab={null}
        divider={true}
        linkRenderer={[Function]}
        locale="AU"
      />
    </Hidden>
    <Hidden
      className="topBanner"
      desktop={false}
      mobile={false}
      print={true}
      screen={false}
    >
      <div
        className="topBannerContent"
      >
        <PartnerSites
          linkRenderer={[Function]}
          locale="AU"
        />
        <div
          className="locale"
        >
          <Locales
            linkRenderer={[Function]}
            locale="AU"
          />
        </div>
      </div>
    </Hidden>
  </section>
</header>
`;

exports[`Header: should render when unauthenticated 1`] = `
<header
  aria-label="Primary navigation"
  className="root"
  role="banner"
>
  <section
    className="content"
  >
    <div
      className="banner"
    >
      <h1
        className="logo"
        data-automation="logo"
      >
        <Logo
          className=""
          svgClassName="logoSvg"
        />
        <a
          className="logoLink"
          data-analytics="header:jobs"
          href="/"
        >
          <ScreenReaderOnly>
            SEEK
          </ScreenReaderOnly>
        </a>
      </h1>
      <Hidden
        className="logoNote"
        desktop={false}
        mobile={false}
        print={false}
        screen={true}
      >
        Australia’s #1 job site
      </Hidden>
      <Hidden
        className="userWrapper"
        desktop={false}
        mobile={false}
        print={true}
        screen={false}
      >
        <div
          className="user user_isUnauthenticated user_isReady"
        >
          <div
            className="userAccountWrapper"
          >
            <UserAccount
              activeTab={null}
              authenticationStatus="unauthenticated"
              linkRenderer={[Function]}
              locale="AU"
              userName=""
            />
          </div>
          <div
            className="signInRegisterWrapper"
          >
            <SignInRegister
              linkRenderer={[Function]}
            />
          </div>
          <span
            className="divider"
          />
        </div>
        <div
          className="employerSite"
        >
          <a
            className="employerLink"
            data-analytics="header:employer+site"
            href="https://talent.seek.com.au/"
          >
            Employer site
          </a>
        </div>
      </Hidden>
    </div>
    <Hidden
      className="navigation"
      desktop={false}
      mobile={false}
      print={true}
      screen={false}
    >
      <Navigation
        activeTab={null}
        divider={true}
        linkRenderer={[Function]}
        locale="AU"
      />
    </Hidden>
    <Hidden
      className="topBanner"
      desktop={false}
      mobile={false}
      print={true}
      screen={false}
    >
      <div
        className="topBannerContent"
      >
        <PartnerSites
          linkRenderer={[Function]}
          locale="AU"
        />
        <div
          className="locale"
        >
          <Locales
            linkRenderer={[Function]}
            locale="AU"
          />
        </div>
      </div>
    </Hidden>
  </section>
</header>
`;

exports[`Header: should render with locale of AU 1`] = `
<header
  aria-label="Primary navigation"
  className="root"
  role="banner"
>
  <section
    className="content"
  >
    <div
      className="banner"
    >
      <h1
        className="logo"
        data-automation="logo"
      >
        <Logo
          className=""
          svgClassName="logoSvg"
        />
        <a
          className="logoLink"
          data-analytics="header:jobs"
          href="/"
        >
          <ScreenReaderOnly>
            SEEK
          </ScreenReaderOnly>
        </a>
      </h1>
      <Hidden
        className="logoNote"
        desktop={false}
        mobile={false}
        print={false}
        screen={true}
      >
        Australia’s #1 job site
      </Hidden>
      <Hidden
        className="userWrapper"
        desktop={false}
        mobile={false}
        print={true}
        screen={false}
      >
        <div
          className="user"
        >
          <div
            className="userAccountWrapper"
          >
            <UserAccount
              activeTab={null}
              authenticationStatus="pending"
              linkRenderer={[Function]}
              locale="AU"
              userName=""
            />
          </div>
          <div
            className="signInRegisterWrapper"
          >
            <SignInRegister
              linkRenderer={[Function]}
            />
          </div>
          <span
            className="divider"
          />
        </div>
        <div
          className="employerSite"
        >
          <a
            className="employerLink"
            data-analytics="header:employer+site"
            href="https://talent.seek.com.au/"
          >
            Employer site
          </a>
        </div>
      </Hidden>
    </div>
    <Hidden
      className="navigation"
      desktop={false}
      mobile={false}
      print={true}
      screen={false}
    >
      <Navigation
        activeTab={null}
        divider={true}
        linkRenderer={[Function]}
        locale="AU"
      />
    </Hidden>
    <Hidden
      className="topBanner"
      desktop={false}
      mobile={false}
      print={true}
      screen={false}
    >
      <div
        className="topBannerContent"
      >
        <PartnerSites
          linkRenderer={[Function]}
          locale="AU"
        />
        <div
          className="locale"
        >
          <Locales
            linkRenderer={[Function]}
            locale="AU"
          />
        </div>
      </div>
    </Hidden>
  </section>
</header>
`;

exports[`Header: should render with locale of NZ 1`] = `
<header
  aria-label="Primary navigation"
  className="root"
  role="banner"
>
  <section
    className="content"
  >
    <div
      className="banner"
    >
      <h1
        className="logo"
        data-automation="logo"
      >
        <Logo
          className=""
          svgClassName="logoSvg"
        />
        <a
          className="logoLink"
          data-analytics="header:jobs"
          href="/"
        >
          <ScreenReaderOnly>
            SEEK
          </ScreenReaderOnly>
        </a>
      </h1>
      <Hidden
        className="logoNote"
        desktop={false}
        mobile={false}
        print={false}
        screen={true}
      >
        Australia’s #1 job site
      </Hidden>
      <Hidden
        className="userWrapper"
        desktop={false}
        mobile={false}
        print={true}
        screen={false}
      >
        <div
          className="user"
        >
          <div
            className="userAccountWrapper"
          >
            <UserAccount
              activeTab={null}
              authenticationStatus="pending"
              linkRenderer={[Function]}
              locale="NZ"
              userName=""
            />
          </div>
          <div
            className="signInRegisterWrapper"
          >
            <SignInRegister
              linkRenderer={[Function]}
            />
          </div>
          <span
            className="divider"
          />
        </div>
        <div
          className="employerSite"
        >
          <a
            className="employerLink"
            data-analytics="header:employer+site"
            href="https://talent.seek.co.nz/"
          >
            Employer site
          </a>
        </div>
      </Hidden>
    </div>
    <Hidden
      className="navigation"
      desktop={false}
      mobile={false}
      print={true}
      screen={false}
    >
      <Navigation
        activeTab={null}
        divider={true}
        linkRenderer={[Function]}
        locale="NZ"
      />
    </Hidden>
    <Hidden
      className="topBanner"
      desktop={false}
      mobile={false}
      print={true}
      screen={false}
    >
      <div
        className="topBannerContent"
      >
        <PartnerSites
          linkRenderer={[Function]}
          locale="NZ"
        />
        <div
          className="locale"
        >
          <Locales
            linkRenderer={[Function]}
            locale="NZ"
          />
        </div>
      </div>
    </Hidden>
  </section>
</header>
`;

exports[`Header: should render with no divider 1`] = `
<header
  aria-label="Primary navigation"
  className="root"
  role="banner"
>
  <section
    className="content"
  >
    <div
      className="banner"
    >
      <h1
        className="logo"
        data-automation="logo"
      >
        <Logo
          className=""
          svgClassName="logoSvg"
        />
        <a
          className="logoLink"
          data-analytics="header:jobs"
          href="/"
        >
          <ScreenReaderOnly>
            SEEK
          </ScreenReaderOnly>
        </a>
      </h1>
      <Hidden
        className="logoNote"
        desktop={false}
        mobile={false}
        print={false}
        screen={true}
      >
        Australia’s #1 job site
      </Hidden>
      <Hidden
        className="userWrapper"
        desktop={false}
        mobile={false}
        print={true}
        screen={false}
      >
        <div
          className="user"
        >
          <div
            className="userAccountWrapper"
          >
            <UserAccount
              activeTab={null}
              authenticationStatus="pending"
              linkRenderer={[Function]}
              locale="AU"
              userName=""
            />
          </div>
          <div
            className="signInRegisterWrapper"
          >
            <SignInRegister
              linkRenderer={[Function]}
            />
          </div>
          <span
            className="divider"
          />
        </div>
        <div
          className="employerSite"
        >
          <a
            className="employerLink"
            data-analytics="header:employer+site"
            href="https://talent.seek.com.au/"
          >
            Employer site
          </a>
        </div>
      </Hidden>
    </div>
    <Hidden
      className="navigation"
      desktop={false}
      mobile={false}
      print={true}
      screen={false}
    >
      <Navigation
        activeTab={null}
        divider={false}
        linkRenderer={[Function]}
        locale="AU"
      />
    </Hidden>
    <Hidden
      className="topBanner"
      desktop={false}
      mobile={false}
      print={true}
      screen={false}
    >
      <div
        className="topBannerContent"
      >
        <PartnerSites
          linkRenderer={[Function]}
          locale="AU"
        />
        <div
          className="locale"
        >
          <Locales
            linkRenderer={[Function]}
            locale="AU"
          />
        </div>
      </div>
    </Hidden>
  </section>
</header>
`;
